/*
Copyright (C) BABEC. All rights reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

option java_package = "org.chainmaker.pb.store";
option go_package = "chainmaker.org/chainmaker-go/pb/protogo/store";

package store;

// KeyModification -- QueryResult for history db query. Holds a transaction ID, value,
// timestamp, and delete marker which resulted from a history query.
message KeyModification {
  string tx_id = 1;
  bytes value = 2;
  int64 timestamp = 3;
  bool is_delete = 4;
}
message TxHistory {
  string tx_id = 1;
  uint64 block_height = 2;
  bytes block_hash = 3;
  int64 timestamp = 4;
}
message KV {
  string contract_name = 1;
  bytes key = 2;
  bytes value = 3;
}
